frida (16.3.3~pirogue2) UNRELEASED; urgency=medium

  * Strip auto/ prefix for debian/* tags.
  * Fix missing build-dep: python3-setuptools.
  * Remove extraneous build-dep: curl.
  * Fix missing --recursive option for `git submodule` operations.

 -- Cyril Brulebois <cyril@debamax.com>  Mon, 29 Jul 2024 09:19:42 +0200

frida (16.3.3~pirogue1) bookworm; urgency=medium

  * New upstream release.

 -- Cyril Brulebois <cyril@debamax.com>  Fri, 07 Jun 2024 15:54:29 +0200

frida (16.3.2~pirogue1) bookworm; urgency=medium

  * New upstream release.

 -- Cyril Brulebois <cyril@debamax.com>  Fri, 07 Jun 2024 15:50:21 +0200

frida (16.3.1~pirogue1) bookworm; urgency=medium

  * New upstream release.

 -- Cyril Brulebois <cyril@debamax.com>  Fri, 07 Jun 2024 15:44:36 +0200

frida (16.3.0~pirogue1) bookworm; urgency=medium

  * New upstream release.

 -- Cyril Brulebois <cyril@debamax.com>  Fri, 07 Jun 2024 15:24:05 +0200

frida (16.2.5~pirogue1) bookworm; urgency=medium

  * New upstream release.
  * Delete patch:
     - stop-looking-at-main.diff (no longer needed).
  * Refresh patch:
     - adjust-versioning-for-debian-tags.diff (context updated).
  * Adjust buildsystem:
     - Switch from none to makefile.
     - Delete the dh_auto_build override.
     - Add dh_auto_clean override, cleaning build/; letting `make clean`
       run would trigger issues otherwise.
     - Additionally clean the deps/ directory, where SDKs are downloaded.
     - Also run `git clean -xdf` in each submodule: __pycache__/
       directories appear in various places, but we also have some other
       things, like subprojects/frida-gum inside subprojects/frida-core.
  * Add patches:
     - fix-python-includes.diff to make sure both pyconfig.h and Python.h
       are found.
     - adjust-default-prefix.diff to use /usr instead of /usr/local.
  * Disable test suite for the time being.
  * Delete dh_python3 override, no longer needed.
  * Delete variables that are no longer needed.
