@@ -4,6 +4,11 @@ frida (16.3.3~pirogue2) UNRELEASED; urgency=medium
   * Fix missing build-dep: python3-setuptools.
   * Remove extraneous build-dep: curl.
   * Fix missing --recursive option for `git submodule` operations.
+  * Make sure to install frida-core-1.0.{deps,vapi} in
+    /usr/share/vala/vapi/ as before: upstream build system modifications
+    lead to their being installed under a directory matching the build
+    directory (e.g. /home/kibi/deb-frida). Since modifying the build
+    system doesn't seem easy, move them into place after installation.
 
  -- Cyril Brulebois <cyril@debamax.com>  Mon, 29 Jul 2024 09:19:42 +0200
 
